Added jsdo.it example

--- a/2t9J/index.html
+++ b/2t9J/index.html
@@ -13,11 +13,11 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- Three.js r71 -->
-<script src="/assets/i/z/6/X/iz6X2.js"></script>
+<script src="../assets/i/z/6/X/iz6X2.js"></script>
 <!-- OrbitControls.js -->
-<script src="/assets/e/w/8/e/ew8eQ.js"></script>
+<script src="../assets/e/w/8/e/ew8eQ.js"></script>
 <!-- Tween.js -->
-<script src="/assets/l/c/M/C/lcMCo.js"></script>
+<script src="../assets/l/c/M/C/lcMCo.js"></script>
 
 
 <link href='//fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:700' rel='stylesheet' type='text/css' />
@@ -31,9 +31,9 @@
 </div>
 </div>
 
-<script type="text/javascript" src="/lib/jquery-2.0.3.js"></script>
+<script type="text/javascript" src="../lib/jquery-2.0.3.js"></script>
 
-<script type="text/javascript" src="/lib/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="../lib/jquery.easing.1.3.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
