--- a/8Jmv/index.html
+++ b/8Jmv/index.html
@@ -14,10 +14,10 @@
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- three.js -->
 <!-- <script type="text/javascript" src="/assets/w/3/o/t/w3ot6"></script> -->
-<script src="http://threejs.org/build/three.min.js"></script>
+<script src="https://threejs.org/build/three.min.js"></script>
 
 <!-- OrbitControls.js -->
-<script src="http://jsrun.it/assets/e/w/8/e/ew8eQ"></script>
+<script src="../assets/e/w/8/e/ew8eQ.js"></script>
 
 <div id="webgl" style="background-color:#e6e6fa"></div>
 
