--- a/zVKl/index.html
+++ b/zVKl/index.html
@@ -105,7 +105,7 @@ void main(void){
 <canvas id="canvas"></canvas>
 
 
-<script type="text/javascript" src="http://jsdo.it/edo_m18/minMatrix/js"></script>
+<script type="text/javascript" src="../lib/minMatrix.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
