--- a/gsAW/index.html
+++ b/gsAW/index.html
@@ -13,16 +13,16 @@
 <!-- Copyright cx20 - http://jsdo.it/cx20 -->
 <!-- Licensed under MIT License - http://www.opensource.org/licenses/mit-license.php -->
 <!-- liquidfun.js -->
-<script src="http://jsrun.it/assets/4/H/W/W/4HWW4"></script>
+<script src="../assets/4/H/W/W/4HWW4.js"></script>
 
 <!-- renderer.js -->
-<script src="http://jsrun.it/assets/k/p/X/r/kpXrt"></script>
+<script src="../assets/k/p/X/r/kpXrt.js"></script>
 
 <!-- utils.js -->
-<script src="http://jsrun.it/assets/c/S/a/l/cSalh"></script>
+<script src="../assets/c/S/a/l/cSalh.js"></script>
 
 
-<script type="text/javascript" src="http://jsdo.it/lib/three.js-r66/js"></script>
+<script type="text/javascript" src="../lib/three.js-r66.js"></script>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
