[簡易版] WebGL で小惑星をプロットしてみるテスト

--- a/qSiE/index.html
+++ b/qSiE/index.html
@@ -35,7 +35,7 @@ void main()
 </script>
 
 <!-- stats.js r12 -->
-<script src="//jsrun.it/assets/o/L/t/z/oLtzH"></script>
+<script src="../assets/o/L/t/z/oLtzH.js"></script>
 
 <canvas id="c" width="465" height="465"></canvas>
 
