[WebGL] Grimoire.js で forward-shading プラグインを試してみるテスト

--- a/ixgd/index.html
+++ b/ixgd/index.html
@@ -25,8 +25,8 @@
 <goml width="fit" height="fit">
   <geometry type="sphere" name="sphere" divHorizontal="30" divVertical="30"/>
   <geometry type="quad" name="quad"/>
-  <!-- <material type="phong" id="cubeMaterial" specularPower="10" specular="white" texture="http://jsrun.it/assets/C/t/K/6/CtK6i.jpg"/> --> <!-- grid.jpg -->
-  <material type="basic-shading" id="cubeMaterial" specularPower="10" specular="white" texture="http://jsrun.it/assets/C/t/K/6/CtK6i.jpg"/> <!-- grid.jpg -->
+  <!-- <material type="phong" id="cubeMaterial" specularPower="10" specular="white" texture="../assets/c/t/K/6/ctK6i.jpg"/> --> <!-- grid.jpg -->
+  <material type="basic-shading" id="cubeMaterial" specularPower="10" specular="white" texture="../assets/c/t/K/6/ctK6i.jpg"/> <!-- grid.jpg -->
   <scene>
     <camera position="0,10,20" rotation="x(-10d)" aspect="1" far="200">
       <camera.components>
